cabal-version: >= 1.2

name: backendsecret
version: 2019

build-type: Simple

executable go
    build-depends:
        base,
        bytestring,
        conduit,
        directory,
        filepath,
        lens,
        text,
        twitter-conduit,
        twitter-types-lens
    main-is: Main.hs
